hr invisible issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@
       #introlayer{
             background-color: rgba(0, 0, 0, 0.6);
       }
+      #introHR{
+            border-color: #6f6f6f;
+      }
 }
 @media screen and (max-width: 480px) {
       #myName{
@@ -28,7 +31,7 @@
             background-color: rgba(0, 0, 0, 0.6);
       }
       #introHR{
-            background-color: #898989;
+            border-color: #6f6f6f;
       }
 }
 @media screen and (min-width: 481px) {
@@ -42,7 +45,7 @@
             background-color: rgba(0, 0, 0, 0.8);
       }
       #introHR{
-            background-color: #333;
+            border-color: #333;
       }
 }
 p{
@@ -71,7 +74,6 @@ p{
 }
 #introHR{
       width:40%;
-      border: none;
       height: 0.5px;
 }
 #myDetails{
